fix panel sizing on mobile

--- a/src/styles/panel.scss
+++ b/src/styles/panel.scss
@@ -98,6 +98,8 @@
       position: sticky;
       top: 0;
       height: min-content;
+      min-width: auto;
+      max-width: 100%;
     }
   }
 
